--- a/Practice_BoilerPlate/8.4.0/aspnet-core/src/Practice_BoilerPlate.Web.Host/appsettings.json
+++ b/Practice_BoilerPlate/8.4.0/aspnet-core/src/Practice_BoilerPlate.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "server=Aryan2005\\sqlexpress; Database=New_Practice_BoilerPlateDb1; Trusted_Connection=True; TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "Default": "server=VINEFORCE-ARYAN; Database=New_Practice_BoilerPlateDb1; Trusted_Connection=True; TrustServerCertificate=True;"
+    },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
     "ClientRootAddress": "http://localhost:4200/",
