--- a/Practice_BoilerPlate/8.4.0/angular/package.json
+++ b/Practice_BoilerPlate/8.4.0/angular/package.json
@@ -11,7 +11,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "test": "ng test",
-     "nswag": "cd nswag/ && refresh.bat"
+    "nswag": "cd nswag/ && refresh.bat"
   },
   "dependencies": {
     "@angular/animations": "^15.0.3",
@@ -19,11 +19,11 @@
     "@angular/compiler": "^15.0.3",
     "@angular/core": "^15.0.3",
     "@angular/forms": "^15.0.3",
-    
     "@angular/platform-browser-dynamic": "^15.0.3",
     "@angular/router": "^15.0.3",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@ng-select/ng-select": "^14.7.0",
     "abp-ng2-module": "8.0.0",
     "abp-web-resources": "^5.7.0",
     "admin-lte-css-only": "^3.2.0",
@@ -34,6 +34,8 @@
     "moment-timezone": "0.5.40",
     "ngx-bootstrap": "^9.0.0",
     "ngx-pagination": "^6.0.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.4.1",
     "push.js": "1.0.12",
     "rxjs": "^7.6.0",
     "sweetalert2": "^11.6.15",
