--- a/Practice_BoilerPlate/8.4.0/angular/package.json
+++ b/Practice_BoilerPlate/8.4.0/angular/package.json
@@ -27,11 +27,13 @@
     "abp-ng2-module": "8.0.0",
     "abp-web-resources": "^5.7.0",
     "admin-lte-css-only": "^3.2.0",
+    "chart.js": "^4.4.9",
     "core-js": "^3.26.1",
     "famfamfam-flags": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "2.29.4",
     "moment-timezone": "0.5.40",
+    "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^9.0.0",
     "ngx-pagination": "^6.0.3",
     "primeicons": "^6.0.1",
