--- a/Practice_BoilerPlate/8.4.0/angular/package.json
+++ b/Practice_BoilerPlate/8.4.0/angular/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^4.4.9",
     "core-js": "^3.26.1",
     "famfamfam-flags": "^1.0.0",
+    "file-saver": "^2.0.5",
     "lodash-es": "^4.17.15",
     "moment": "2.29.4",
     "moment-timezone": "0.5.40",
@@ -43,6 +44,7 @@
     "sweetalert2": "^11.6.15",
     "ts-helpers": "^1.1.2",
     "tslib": "^2.4.1",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
